# stack-graphs

languages/tree-sitter-stack-graphs-scala/: CHANGELOG.md  Cargo.toml  README.md
languages/tree-sitter-stack-graphs-scala/rust/: bin.rs  lib.rs  test.rs
languages/tree-sitter-stack-graphs-scala/src/: stack-graphs.tsg
tree-sitter-stack-graphs/src/: lib.rs
