[package]
name = "tree-sitter-stack-graphs-scala"
version = "0.1.0"
description = "Stack graphs definition for scala using tree-sitter-scala"
readme = "README.md"
keywords = ["tree-sitter", "stack-graphs", "scala"]
authors = [
    "BimalGrewal<grewal.bimal@gmail.com>",
]
edition = "2018"

[[bin]]
name = "tree-sitter-stack-graphs-scala"
path = "rust/bin.rs"
required-features = ["cli"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false

[features]
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
tree-sitter-stack-graphs = { version = "0.10.0" }
tree-sitter-scala = "0.24.0"

[dev-dependencies]
anyhow = "1.0"
tree-sitter-stack-graphs = { version = "0.10.0", features = ["cli"] }
